syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.github.mangila.pokedex.backstage.model.grpc.pokeapi";

message GenerationResponsePrototype {
  repeated string name = 1;
}

message PokemonSpeciesResponsePrototype {
  int32 id = 1;
  string name = 2;
  string generation = 3;
  repeated NamePrototype names = 4;
  repeated GeneraPrototype genera = 5;
  string evolution_chain_url = 6;
  repeated FlavorTextEntriesPrototype flavor_text_entries = 7;
  repeated string varieties = 8;
  bool is_baby = 9;
  bool is_legendary = 10;
  bool is_mythical = 11;
}

message NamePrototype {
  string language = 1;
  string name = 2;
}

message GeneraPrototype {
  string language = 1;
  string genus = 2;
}

message FlavorTextEntriesPrototype {
  string flavor_text = 1;
  string language = 2;
}

message EvolutionChainResponsePrototype {
  ChainPrototype chain = 1;
}

message ChainPrototype {
  repeated EvolutionChainPrototype first_chain = 1;
  string speciesName = 2;
}

message EvolutionChainPrototype {
  repeated EvolutionChainPrototype next_chain = 1;
  string speciesName = 2;
}

message PokemonResponsePrototype {
  int32 id = 1;
  string name = 2;
  int32 height = 3;
  int32 weight = 4;
  bool is_default = 5;
  CriesPrototype cries = 6;
  repeated StatsPrototype stats = 7;
  repeated string types = 8;
  SpritesPrototype sprites = 9;
}

message CriesPrototype {
  string latest = 1;
  string legacy = 2;
}

message StatsPrototype {
  string name = 1;
  int32 value = 2;
}

message SpritesPrototype {
  string front_default = 1;
  string official_artwork = 2;
}
