syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.github.mangila.pokedex.backstage.model.grpc.redis";

// Create a new StreamRecord
message StreamRecord {
  string streamKey = 1;
  string recordId = 2;
  map<string, string> data = 3;
}

// Create a new Entry
message EntryRequest {
  string key = 1;
  string value = 2;
}